feat: enhance planner tools and branding

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,15 @@
 # Get your API key from https://openrouter.ai/
 OPENROUTER_API_KEY="sk-or-v1-your-api-key-here"
 
-# Optional: Override the default AI model (default: x-ai/grok-4-fast)
+# Optional: Override the default text AI model (default: x-ai/grok-4-fast)
 # Available models: x-ai/grok-4-fast, anthropic/claude-3.5-sonnet, openai/gpt-4o, etc.
-# OPENROUTER_MODEL="x-ai/grok-4-fast"
+OPENROUTER_MODEL="x-ai/grok-4-fast"
+
+# Optional: Override the default vision-capable model (default: openai/gpt-4o-mini)
+# Set this when you need image understanding in plans.
+OPENROUTER_VISION_MODEL="openai/gpt-4.1-mini"
 
 # Setup Instructions:
 # 1. Copy this file to .env.local
 # 2. Replace "your-api-key-here" with your actual OpenRouter API key
-# 3. Optionally set OPENROUTER_MODEL if you want to use a different model
+# 3. Optionally set OPENROUTER_MODEL and/or OPENROUTER_VISION_MODEL if you want to use different models
