feat: add global footer with policy links

--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,20 @@ OPENROUTER_API_KEY="sk-or-v1-your-api-key-here"
 
 # Optional: Override the default text AI model (default: x-ai/grok-4-fast)
 # Available models: x-ai/grok-4-fast, anthropic/claude-3.5-sonnet, openai/gpt-4o, etc.
+# Optional override. Comment out to use the default configured in 코드.
 OPENROUTER_MODEL="x-ai/grok-4-fast"
 
 # Optional: Override the default vision-capable model (default: openai/gpt-4o-mini)
 # Set this when you need image understanding in plans.
+# Optional override. Comment out to use the default vision 모델.
 OPENROUTER_VISION_MODEL="openai/gpt-4.1-mini"
+
+# Footer privacy policy link displayed to 사용자가 클릭할 수 있도록 설정합니다.
+# 예: https://easycalendar.example.com/privacy
+# NEXT_PUBLIC_PRIVACY_POLICY_URL="https://your-domain/privacy"
 
 # Setup Instructions:
 # 1. Copy this file to .env.local
 # 2. Replace "your-api-key-here" with your actual OpenRouter API key
 # 3. Optionally set OPENROUTER_MODEL and/or OPENROUTER_VISION_MODEL if you want to use different models
+# 4. (선택) NEXT_PUBLIC_PRIVACY_POLICY_URL을 추가하여 개인정보처리방침 링크를 노출하세요.
