--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ OPENROUTER_VISION_MODEL="openai/gpt-4.1-mini"
 
 # Footer privacy policy link displayed to 사용자가 클릭할 수 있도록 설정합니다.
 # 예: https://easycalendar.example.com/privacy
+## Sample value (주석 제거 후 사용)
 # NEXT_PUBLIC_PRIVACY_POLICY_URL="https://your-domain/privacy"
 
 # Setup Instructions:
