feat(ai): add Groq provider integration with model selector UI
implement Groq API support alongside existing OpenRouter integration
add provider selection dropdown in chat UI with auto/groq/openrouter options
update documentation and env templates for new configuration
refactor logging and types to support multiple AI providers

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,30 @@
-# OpenRouter API Configuration
+# AI Provider Selection
+# - openrouter: OpenRouter only
+# - groq: Groq only
+# - auto: prefer Groq when GROQ_API_KEY is set, otherwise fallback to OpenRouter
+PLANNER_AI_PROVIDER="auto"
+
+# Client default selector (mirrors PLANNER_AI_PROVIDER unless overwritten)
+NEXT_PUBLIC_DEFAULT_AI_PROVIDER="auto"
+
+# Groq API Configuration (optional unless provider=groq)
+# Get keys from https://console.groq.com/
+GROQ_API_KEY="gsk_your-api-key-here"
+
+# Optional: Override default Groq text model (default: meta-llama/llama-3.3-70b-versatile)
+GROQ_MODEL="meta-llama/llama-3.3-70b-versatile"
+
+# Optional: Override default Groq multimodal model (default: meta-llama/llama-4-maverick-17b-128e-instruct)
+GROQ_VISION_MODEL="meta-llama/llama-4-maverick-17b-128e-instruct"
+
+# OpenRouter API Configuration (still supported / used as fallback)
 # Get your API key from https://openrouter.ai/
 OPENROUTER_API_KEY="sk-or-v1-your-api-key-here"
 
-# Optional: Override the default text AI model (default: x-ai/grok-4-fast)
-# Available models: x-ai/grok-4-fast, anthropic/claude-3.5-sonnet, openai/gpt-4o, etc.
-# Optional override. Comment out to use the default configured in 코드.
+# Optional: Override the default OpenRouter text AI model (default: x-ai/grok-4-fast:free)
 OPENROUTER_MODEL="x-ai/grok-4-fast"
 
-# Optional: Override the default vision-capable model (default: openai/gpt-4o-mini)
-# Set this when you need image understanding in plans.
-# Optional override. Comment out to use the default vision 모델.
+# Optional: Override the default OpenRouter vision-capable model (default: openai/gpt-4o-mini)
 OPENROUTER_VISION_MODEL="openai/gpt-4.1-mini"
 
 # Footer privacy policy link displayed to 사용자가 클릭할 수 있도록 설정합니다.
@@ -19,6 +34,6 @@ OPENROUTER_VISION_MODEL="openai/gpt-4.1-mini"
 
 # Setup Instructions:
 # 1. Copy this file to .env.local
-# 2. Replace "your-api-key-here" with your actual OpenRouter API key
-# 3. Optionally set OPENROUTER_MODEL and/or OPENROUTER_VISION_MODEL if you want to use different models
+# 2. Configure PLANNER_AI_PROVIDER and replace API keys for the providers you want to use
+# 3. Optionally override the model IDs for Groq/OpenRouter text & vision calls
 # 4. (선택) NEXT_PUBLIC_PRIVACY_POLICY_URL을 추가하여 개인정보처리방침 링크를 노출하세요.
